[gd_scene load_steps=5 format=3 uid="uid://csh2st115aykt"]

[ext_resource type="Script" uid="uid://bs6tqxa7y6tla" path="res://Objects/MarkerEditor.gd" id="1_ahwah"]
[ext_resource type="PackedScene" uid="uid://mcrtiysshhtn" path="res://Objects/CardHolder.tscn" id="2_5devq"]
[ext_resource type="PackedScene" uid="uid://0xr5tjdhspj2" path="res://Objects/IconPicker.tscn" id="3_wj1nb"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5devq"]
bg_color = Color(0.4, 0.533333, 0.666667, 1)
expand_margin_left = 2.0
expand_margin_top = 2.0
expand_margin_right = 6.0
expand_margin_bottom = 2.0

[node name="MarkerEditor" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ahwah")

[node name="Panel" type="Panel" parent="."]
z_index = 100
layout_mode = 1
anchors_preset = -1
anchor_left = 0.1
anchor_top = 0.1
anchor_right = 0.9
anchor_bottom = 0.9
offset_right = -400.0
grow_horizontal = 2
grow_vertical = 2

[node name="Sep" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 8

[node name="Title" type="Label" parent="Panel/Sep"]
layout_mode = 2
text = "Marker Editor"

[node name="Marker1" type="HBoxContainer" parent="Panel/Sep"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="On" type="CheckButton" parent="Panel/Sep/Marker1"]
custom_minimum_size = Vector2(105, 0)
layout_mode = 2
text = "Marker 1"

[node name="Panel" type="Panel" parent="Panel/Sep/Marker1"]
custom_minimum_size = Vector2(42, 0)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_5devq")

[node name="Label" type="Label" parent="Panel/Sep/Marker1/Panel"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -41.0
offset_top = -11.05
offset_bottom = 11.05
grow_horizontal = 0
grow_vertical = 2
text = "Color:"
horizontal_alignment = 2

[node name="Color" type="ColorPickerButton" parent="Panel/Sep/Marker1"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
color = Color(0.5325, 1, 0.15, 1)
edit_alpha = false

[node name="Icon" type="Button" parent="Panel/Sep/Marker1"]
custom_minimum_size = Vector2(30, 0)
layout_mode = 2
text = "Set Icon"
icon_alignment = 1
expand_icon = true

[node name="IconDisp" type="TextureRect" parent="Panel/Sep/Marker1"]
custom_minimum_size = Vector2(24, 24)
layout_mode = 2
expand_mode = 1

[node name="Marker2" type="HBoxContainer" parent="Panel/Sep"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="On" type="CheckButton" parent="Panel/Sep/Marker2"]
custom_minimum_size = Vector2(105, 0)
layout_mode = 2
text = "Marker 2"

[node name="Panel" type="Panel" parent="Panel/Sep/Marker2"]
custom_minimum_size = Vector2(42, 0)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_5devq")

[node name="Label" type="Label" parent="Panel/Sep/Marker2/Panel"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -41.0
offset_top = -11.05
offset_bottom = 11.05
grow_horizontal = 0
grow_vertical = 2
text = "Color:"
horizontal_alignment = 2

[node name="Color" type="ColorPickerButton" parent="Panel/Sep/Marker2"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
color = Color(0.5325, 1, 0.15, 1)
edit_alpha = false

[node name="Icon" type="Button" parent="Panel/Sep/Marker2"]
custom_minimum_size = Vector2(30, 0)
layout_mode = 2
text = "Set Icon"
icon_alignment = 1
expand_icon = true

[node name="IconDisp" type="TextureRect" parent="Panel/Sep/Marker2"]
custom_minimum_size = Vector2(24, 24)
layout_mode = 2
expand_mode = 1

[node name="Marker3" type="HBoxContainer" parent="Panel/Sep"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="On" type="CheckButton" parent="Panel/Sep/Marker3"]
custom_minimum_size = Vector2(105, 0)
layout_mode = 2
text = "Marker 3"

[node name="Panel" type="Panel" parent="Panel/Sep/Marker3"]
custom_minimum_size = Vector2(42, 0)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_5devq")

[node name="Label" type="Label" parent="Panel/Sep/Marker3/Panel"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -41.0
offset_top = -11.05
offset_bottom = 11.05
grow_horizontal = 0
grow_vertical = 2
text = "Color:"
horizontal_alignment = 2

[node name="Color" type="ColorPickerButton" parent="Panel/Sep/Marker3"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
color = Color(0.5325, 1, 0.15, 1)
edit_alpha = false

[node name="Icon" type="Button" parent="Panel/Sep/Marker3"]
custom_minimum_size = Vector2(30, 0)
layout_mode = 2
text = "Set Icon"
icon_alignment = 1
expand_icon = true

[node name="IconDisp" type="TextureRect" parent="Panel/Sep/Marker3"]
custom_minimum_size = Vector2(24, 24)
layout_mode = 2
expand_mode = 1

[node name="Marker4" type="HBoxContainer" parent="Panel/Sep"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="On" type="CheckButton" parent="Panel/Sep/Marker4"]
custom_minimum_size = Vector2(105, 0)
layout_mode = 2
text = "Marker 4"

[node name="Panel" type="Panel" parent="Panel/Sep/Marker4"]
custom_minimum_size = Vector2(42, 0)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_5devq")

[node name="Label" type="Label" parent="Panel/Sep/Marker4/Panel"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -41.0
offset_top = -11.05
offset_bottom = 11.05
grow_horizontal = 0
grow_vertical = 2
text = "Color:"
horizontal_alignment = 2

[node name="Color" type="ColorPickerButton" parent="Panel/Sep/Marker4"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
color = Color(0.5325, 1, 0.15, 1)
edit_alpha = false

[node name="Icon" type="Button" parent="Panel/Sep/Marker4"]
custom_minimum_size = Vector2(30, 0)
layout_mode = 2
text = "Set Icon"
icon_alignment = 1
expand_icon = true

[node name="IconDisp" type="TextureRect" parent="Panel/Sep/Marker4"]
custom_minimum_size = Vector2(24, 24)
layout_mode = 2
expand_mode = 1

[node name="CardHolder" parent="Panel/Sep" instance=ExtResource("2_5devq")]
layout_mode = 2
size_flags_horizontal = 0

[node name="Done" type="Button" parent="Panel"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 0
offset_left = 10.0
offset_top = 535.0
offset_right = 70.0
offset_bottom = 561.635
text = "OK"

[node name="IconPicker" parent="." instance=ExtResource("3_wj1nb")]
visible = false
layout_mode = 1

[node name="Title" parent="IconPicker/Panel" index="0"]
layout_mode = 0
offset_left = 0.0
offset_top = 0.0
offset_right = 152.0
offset_bottom = 23.0

[connection signal="pressed" from="Panel/Sep/Marker1/Icon" to="." method="_on_icon_pressed" binds= [1]]
[connection signal="pressed" from="Panel/Sep/Marker2/Icon" to="." method="_on_icon_pressed" binds= [2]]
[connection signal="pressed" from="Panel/Sep/Marker3/Icon" to="." method="_on_icon_pressed" binds= [3]]
[connection signal="pressed" from="Panel/Sep/Marker4/Icon" to="." method="_on_icon_pressed" binds= [4]]
[connection signal="pressed" from="Panel/Done" to="." method="_on_done_pressed"]
[connection signal="icon_cleared" from="IconPicker" to="." method="_on_icon_picker_icon_cleared"]
[connection signal="icon_selected" from="IconPicker" to="." method="_on_icon_picker_icon_selected"]

[editable path="IconPicker"]
